--- a/modal.css
+++ b/modal.css
@@ -23,7 +23,7 @@
     font-family: Arial, Helvetica, sans-serif;
     left: 50%;
     line-height: 1.5;
-    width: 520px;
+    width: 90%;
     padding: 1.5rem;
     position: absolute;
     top: 50%;
@@ -154,4 +154,10 @@
     .modal__btn:hover {
         background-color: #d3d3d5;
     }
-  }
+}
+
+@media (min-width: 768px) {
+    .modal {
+        width: 520px;
+    }
+}
